Fix invisible link to contact

--- a/styles.css
+++ b/styles.css
@@ -225,6 +225,20 @@ section.introduction{
     border: solid 4px black;
 
 }
+.contact a{
+    margin-top: 5px;
+    color:#ff4365;
+}
+.contact a:hover{
+    background-color:#00d9c0;
+    color:#000000;
+    padding:1px 5px;
+    margin-top:10px;
+    border:2px solid black;
+}
+.contact div p{
+    margin-top:10px;
+}
 /* Media Queries */
 @media only screen and (max-width: 1200px) {
     .home-middle-alignment{
